2006-07-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Doc-comment improvements.

2006-07-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(create_file_url(const uri &)): Removed invalid assertion.
	From Andrew Grieve <sgrieve@users.sourceforge.net>

2006-07-25 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node_impl_util.cpp

2006-07-24 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp

2006-07-24 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_impl_util.cpp

2006-07-24 Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header: Style sheet updates for doxygen 1.4.7.

2006-07-24 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml-player/plugin_streambuf.cpp
	(openvrml_player::plugin_streambuf::underflow()): Fixes for
	char_type/int_type consistency.

2006-07-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Doc-comment improvements.

2006-07-24 Braden McDaniel  <braden@endoframe.com>

	Changed uninitialized_plugin_streambuf_map to use a std::multimap
	since the map may need to contain more than one request for the
	same resource.

	* mozilla-plugin/src/openvrml-player/gtkvrmlbrowser.cpp
	(browser::do_get_resource(const
	std::string&)::plugin_resource_istream::plugin_resource_istream(const
	std:string &, GIOChannel *)):
	uninitialized_plugin_streambuf_map::insert no longer returns a
	value.
	* mozilla-plugin/src/openvrml-player/player.cpp